<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".CubeEdit">

    <GridView
        android:id="@+id/cubeGridEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </GridView>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TableRow
            android:id="@+id/colorRow"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/RedBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/OrangeBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                android:id="@+id/WhiteBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white" />

            <Button
                android:id="@+id/YellowBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="#FFEB3B" />

            <Button
                android:id="@+id/GreenBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_green_light" />

            <Button
                android:id="@+id/BlueBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:backgroundTint="#0000FF" />

        </TableRow>

        <TableRow
            android:id="@+id/cwRow"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/RBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/R" />

            <Button
                android:id="@+id/LBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/L" />

            <Button
                android:id="@+id/UBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/U" />

            <Button
                android:id="@+id/DBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/D" />

            <Button
                android:id="@+id/FBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/F" />

            <Button
                android:id="@+id/BBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/B" />

        </TableRow>

        <TableRow
            android:id="@+id/ccwRow"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/RPrimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/RPrime" />

            <Button
                android:id="@+id/LPrimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/LPrime" />

            <Button
                android:id="@+id/UPrimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/UPrime" />

            <Button
                android:id="@+id/DPrimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/DPrime" />

            <Button
                android:id="@+id/FPrimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/FPrime" />

            <Button
                android:id="@+id/BPrimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/BPrime" />

        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="82dp">

            <Button
                android:id="@+id/randomBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:text="@string/random"
                android:textSize="12sp" />

            <Button
                android:id="@+id/resetBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="3dp"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textSize="12sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/cubeEditGuideTV"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cubeEditInstructions"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <EditText
        android:id="@+id/scrambleToCubeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.146" />

    <Button
        android:id="@+id/applyScrambleBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/applyScramble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrambleToCubeET" />

</androidx.constraintlayout.widget.ConstraintLayout>